--- a/css/style.css
+++ b/css/style.css
@@ -164,6 +164,13 @@ img {
     max-width: 100%;
     height: auto;
 }
+.top {
+    position: fixed;
+    bottom: 15px;
+    right: 15px;
+    z-index: 100;
+}
+
 
 /* Header */
 
